Fix crash when setting duplicate receive codecs.

Instead of crashing, log a warning.

Bug: chromium:810173
Change-Id: I7e43889fdab429fcb231657f5770b0ff26f34a8f
Reviewed-on: https://webrtc-review.googlesource.com/59020
Reviewed-by: Magnus Jedvert <magjed@webrtc.org>
Commit-Queue: Anders Carlsson <andersc@webrtc.org>
Cr-Commit-Position: refs/heads/master@{#22322}